changes to navbar

--- a/index.html
+++ b/index.html
@@ -58,13 +58,23 @@
                     </ul>
 
                     <ul class="nav-menu-mobile">
+                        <div id="nav-submenu-mobile5" class="nav-submenu-mobile">
+                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp About us
+                                <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
+                                    <li><a href="https://mdfconsulting.eu/aboutus">-</a></li>
+                                </ul>
+                            </li>
+                        </div>
                         <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises
                                 <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
-                                    <li><a href="https://mdfconsulting.eu/expertises#viralvaccins">- Viral Vaccines</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#viralvaccins">- Viral Vectors & Vaccines</a></li>
                                     <li><a href="https://mdfconsulting.eu/expertises#gentherapy">- Gen Therapy</a></li>
-                                    <li><a href="https://mdfconsulting.eu/expertises#therapeuticproteins">- Therapeutic proteins</a></li>
-                                    <li><a href="https://mdfconsulting.eu/expertises#biosimilars">- Enzymes & Biosimilars</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#therapeuticproteins">- Therapeutic proteins & Antibodies</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#biosimilars">- Biosimilars & Enzymes</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#bloodfactors">- Blood Factors</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#nanoparticles">- Nano Particles</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#medicaldevices">- Medical Devices</a></li>
                                 </ul>
                             </li>
                         </div>
@@ -72,8 +82,9 @@
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Services
                                 <ul id="nav-submenu-list-mobile2" class="nav-submenu-list-mobile">
                                     <li><a href="https://mdfconsulting.eu/services#projectbased">- Project Based</a></li>
-                                    <li><a href="https://mdfconsulting.eu/services#consultancy">- Consultancy</a></li>
-                                    <li><a href="https://mdfconsulting.eu/services#procesoptimization">- Project Optimization</a></li>
+                                    <li><a href="https://mdfconsulting.eu/services#assays">- Assays</a></li>
+                                    <li><a href="https://mdfconsulting.eu/services#processdesign">- Process Design</a></li>
+                                    <li><a href="https://mdfconsulting.eu/services#batchproduction">- Support Batch Production</a></li>
                                     <li><a href="https://mdfconsulting.eu/services#trainings">- Trainings</a></li>
                                 </ul>
                             </li>
@@ -88,8 +99,8 @@
                         <div id=nav-submenu-mobile4 class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Contact
                                 <ul id="nav-submenu-list-mobile4" class="nav-submenu-list-mobile">
-                                    <li><a href="#">Linkedin</a></li>
-                                    <li><a href="#">Adress</a></li>
+                                    <li><a href="https://mdfconsulting.eu/contact#email">Email</a></li>
+                                    <li><a href="https://mdfconsulting.eu/contact#linkedin">LinkedIn</a></li>
                                 </ul>
                             </li>
                         </div>
