added script back

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <body>
 
         <header>
-            <script src="script.js" async></script>
             <div class="wrapper-header" id="navbar">
                 <h1 class="header-h1">
                     <a href="https://mdfconsulting.eu/">
@@ -114,6 +113,7 @@
                 </div>
             </div>
         </header>  
+        <script src="script.js"></script>
 
         <img class="banner-image-index" src="images/banner5.jpg" alt="A large image">
 
