--- a/index.html
+++ b/index.html
@@ -30,21 +30,25 @@
                         <li><a href="https://mdfconsulting.eu/aboutus" class="nav-link">About us</a></li>
                         <li><a href="https://mdfconsulting.eu/expertises" class="nav-link">Expertises</a>
                             <ul>
-                                <li><a href="https://mdfconsulting.eu/expertises#viralvaccins">- Viral Vectors & Vaccines</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#viralvaccins">- Vaccines</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#viralvectors">- Viral Vectors</a></li>
                                 <li><a href="https://mdfconsulting.eu/expertises#gentherapy">- Gen Therapy</a></li>
                                 <li><a href="https://mdfconsulting.eu/expertises#therapeuticproteins">- Therapeutic proteins & Antibodies</a></li>
                                 <li><a href="https://mdfconsulting.eu/expertises#biosimilars">- Biosimilars & Enzymes</a></li>
                                 <li><a href="https://mdfconsulting.eu/expertises#bloodfactors">- Blood Factors</a></li>
                                 <li><a href="https://mdfconsulting.eu/expertises#nanoparticles">- Nano Particles</a></li>
                                 <li><a href="https://mdfconsulting.eu/expertises#medicaldevices">- Medical Devices</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#scale-up">- Proces Scale-up</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#validation">- Proces Validation</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#cleaning">- Cleaning Validation</a></li>
+                                <li><a href="https://mdfconsulting.eu/expertises#reuse">- Reuse of Disposables / Singe-use</a></li>
                             </ul>
                         </li>
                         <li><a href="https://mdfconsulting.eu/services" class="nav-link">Services</a>
                             <ul>
-                                <li><a href="https://mdfconsulting.eu/services#projectbased">- Project Based</a></li>
+                                <li><a href="https://mdfconsulting.eu/services#processes">- Processes</a></li>
                                 <li><a href="https://mdfconsulting.eu/services#assays">- Assays</a></li>
                                 <li><a href="https://mdfconsulting.eu/services#processdesign">- Process Design</a></li>
-                                <li><a href="https://mdfconsulting.eu/services#batchproduction">- Support Batch Production</a></li>
                                 <li><a href="https://mdfconsulting.eu/services#trainings">- Trainings</a></li>
                             </ul>
                         </li>
@@ -56,7 +60,6 @@
                             </ul>
                         </li>
                     </ul>
-
                     <ul class="nav-menu-mobile">
                         <div id="nav-submenu-mobile5" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp About us
@@ -68,23 +71,27 @@
                         <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises
                                 <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
-                                    <li><a href="https://mdfconsulting.eu/expertises#viralvaccins">- Viral Vectors & Vaccines</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#viralvaccins">- Vaccines</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#viralvectors">- Viral Vectors</a></li>
                                     <li><a href="https://mdfconsulting.eu/expertises#gentherapy">- Gen Therapy</a></li>
                                     <li><a href="https://mdfconsulting.eu/expertises#therapeuticproteins">- Therapeutic proteins & Antibodies</a></li>
                                     <li><a href="https://mdfconsulting.eu/expertises#biosimilars">- Biosimilars & Enzymes</a></li>
                                     <li><a href="https://mdfconsulting.eu/expertises#bloodfactors">- Blood Factors</a></li>
                                     <li><a href="https://mdfconsulting.eu/expertises#nanoparticles">- Nano Particles</a></li>
                                     <li><a href="https://mdfconsulting.eu/expertises#medicaldevices">- Medical Devices</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#scale-up">- Proces Scale-up</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#validation">- Proces Validation</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#cleaning">- Cleaning Validation</a></li>
+                                    <li><a href="https://mdfconsulting.eu/expertises#reuse">- Reuse of Disposables / Singe-use</a></li>
                                 </ul>
                             </li>
                         </div>
                         <div id="nav-submenu-mobile2" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Services
                                 <ul id="nav-submenu-list-mobile2" class="nav-submenu-list-mobile">
-                                    <li><a href="https://mdfconsulting.eu/services#projectbased">- Project Based</a></li>
+                                    <li><a href="https://mdfconsulting.eu/services#processes">- Processes</a></li>
                                     <li><a href="https://mdfconsulting.eu/services#assays">- Assays</a></li>
                                     <li><a href="https://mdfconsulting.eu/services#processdesign">- Process Design</a></li>
-                                    <li><a href="https://mdfconsulting.eu/services#batchproduction">- Support Batch Production</a></li>
                                     <li><a href="https://mdfconsulting.eu/services#trainings">- Trainings</a></li>
                                 </ul>
                             </li>
